--- a/manifest.json
+++ b/manifest.json
@@ -3,15 +3,16 @@
     "version": "0.0.0.2",
     "description": "Fanfou Assistant: Filter unwanted messages, advanced search button; display user's backgound image;",
     "browser_action":{
-        "default_icon": "icon.png",
+        "default_icon": "48.png",
         "popup": "popup.html",
         "default_title": "Fanfou Assistant"
     },
     "permissions":[
-        "http://fanfou.com/*","http://fanwai.com/*","cookies"
+        "http://fanfou.com/*","http://fanwai.com/*"
         ],
     "icons":{
-        "16":"16.png"
+        "48":"icon.png",
+		"128":"icon.png"
     },
     "content_scripts": [
 	    {
