--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Fanfou Assistant",
-    "version": "0.0.0.4",
+    "version": "0.0.0.5",
     "description": "Fanfou Assistant: Filter unwanted messages, advanced search button; display user's backgound image;",
     "browser_action":{
         "default_icon": "48.png",
@@ -8,7 +8,7 @@
         "default_title": "Fanfou Assistant"
     },
     "permissions":[
-        "http://fanfou.com/*","http://fanwai.com/*"
+        "http://fanfou.com/*","http://fanwai.com/*","notifications"
         ],
     "icons":{
         "48":"icon.png",
@@ -17,7 +17,8 @@
     "content_scripts": [
 	    {
 	      "matches": ["http://fanfou.com/*", "http://fanwai.com/*"],
-	      "js": ["main.js"]
+	      "js": ["main.js"],
+          "css":["ex_style.css"]
 	    }
 	  ],
 	"background_page": "bg.html"
